feat: added itemprop in og:image

--- a/src/templates/videoMetatag.html
+++ b/src/templates/videoMetatag.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="{{og:url}}" />
     <meta property="og:title" content="{{og:title}}" />
     <meta property="og:description" content="{{og:description}}" />
-    <meta property="og:image" content="{{og:image}}" />
+    <meta property="og:image" itemprop="image" content="{{og:image}}" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
