--- a/src/templates/videoMetatag.html
+++ b/src/templates/videoMetatag.html
@@ -16,6 +16,8 @@
     <meta property="og:title" content="{{og:title}}" />
     <meta property="og:description" content="{{og:description}}" />
     <meta property="og:image" itemprop="image" content="{{og:image}}" />
+    <meta property="og:image:width" content="320" />
+    <meta property="og:image:height" content="180" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -30,13 +32,12 @@
   <body></body>
   <script>
     const redirectPage = () => {
-      const redirectURL = document.querySelector("meta[property='og:url']")
-        .content;
+      const redirectURL = document.querySelector("meta[property='og:url']").content;
       setTimeout(() => {
         window.location.replace(redirectURL);
       }, 500);
     };
 
-    window.addEventListener("load", () => redirectPage());
+    window.addEventListener('load', () => redirectPage());
   </script>
 </html>
